[package]
name = "p2p"
version = "0.1.0"
authors = ["melonattacker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4"
env_logger = "0.7.1"
failure = "0.1.6"
crossbeam = "0.7.2"
ctrlc = "3.1.3"
signal-hook="0.1.0"
libc="0.2.65"